# ewoksserver

./: .\workflows\CentreBeam  .\workflows\CentreBeam.json  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  config.py  ewoks_events.db  pyproject.toml  requirements-conda.txt  setup.cfg
.github/workflows/: release.yml  test.yml
backend/: agraph(146).json
backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
backend/app/: server.py
doc/: api.rst  conf.py  configuration.rst  dev.rst  explanations.rst  index.rst  reference.rst  restapi.rst  restapi_versioning.rst  tutorials.rst
doc/_templates/autosummary/: class.rst
doc/explanations/: index.rst  restapi.rst
doc/reference/: api.rst  index.rst
doc/tutorials/: configuration.rst  getting_started.rst  index.rst
ewoksserver/: events.py  server.py
ewoksserver/app/: server.py
ewoksserver/ewoks/: execution.py
ewoksserver/resources/: __init__.py  api.py  tasks.py  workflows.py
ewoksserver/resources/binary/: __init__.py  icons.py  resource.py  utils.py
ewoksserver/resources/filesystem/: __init__.py  resource.py  tasks.py  utils.py  workflows.py
ewoksserver/resources/json/: __init__.py  icons.py  resource.py  tasks.py  utils.py  workflows.py
ewoksserver/tests/: conftest.py  test_events.py  test_execute.py  test_icons.py  test_tasks.py  test_workflows.py
ewoksweback/app/: server.py
ewoksweback/resources/: tasks.py  workflows.py
ewoksweback/tests/: conftest.py
icons/: orange2.json
src/ewoksserver/: __main__.py  config.py  example.py  main.py  server.py  spec.py
src/ewoksserver/app/: __init__.py  config.py  cors.py  lifespan.py  models.py
src/ewoksserver/app/backends/: binary_backend.py  json_backend.py
src/ewoksserver/app/routers/: frontend.py  utils.py
src/ewoksserver/app/routers/common/: models.py
src/ewoksserver/app/routers/icons/: __init__.py  models.py  router.py
src/ewoksserver/app/routers/tasks/: __init__.py  discovery.py  models.py  router.py
src/ewoksserver/app/routers/workflows/: models.py  router.py
src/ewoksserver/app/routes/: backend.py  frontend.py  status.py  versioning.py
src/ewoksserver/app/routes/common/: utils.py
src/ewoksserver/app/routes/execution/: events.py  models.py  router.py  socketio.py  utils.py
src/ewoksserver/app/routes/icons/: models.py  router.py
src/ewoksserver/app/routes/tasks/: discovery.py  models.py  router.py
src/ewoksserver/app/routes/workflows/: descriptions.py  models.py  router.py
src/ewoksserver/events/: websocket.py
src/ewoksserver/resources/: api.py
src/ewoksserver/resources/binary/: icons.py  resource.py  utils.py
src/ewoksserver/resources/events/: resource.py
src/ewoksserver/resources/json/: resource.py  tasks.py  utils.py  workflows.py
src/ewoksserver/tests/: api_versions.py  conftest.py  socketio_test.py  test_default.py  test_discover.py  test_events.py  test_execute.py  test_icons.py  test_settings.py  test_tasks.py  test_websocket_connection.py  test_workflows.py
src/ewoksserver/tests/data/: __init__.py
src/ewoksserver/tests/data/icons/: __init__.py
src/ewoksserver/tests/data/workflows/: __init__.py  workflow_with_non_ewoks_props.json
src/ewoksserver/tests/old/: conftest.py  test_default.py  test_events.py  test_execute.py  test_icons.py  test_socketio_connection.py  test_tasks.py
tasks/: MethodExecutorTask  NabuVolume  PpfMethodExecutorTask  ScriptExecutorTask  graphInput  graphOutput  taskSkeleton
workflows/: 3nodes  CommonExp  CommonPrepareExperiment  checkAndCalibrate  giannis  inout  myG1  myG2  myG3  newTask  new_graph000  superGraph
