[build-system]
requires = ["setuptools>=46.4"]
build-backend = "setuptools.build_meta"

[project]
name = "ewoksserver"
version = "2.1.2"
authors = [{ name = "ESRF", email = "dau-pydev@esrf.fr" }]
description = "Backend for ewoksweb"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-socketio",
    "ewoksjob[worker] >=1.1,<2",
    "ewokscore >=1.0.0",
    "pydantic-settings",
    "packaging",
]

[project.urls]
Homepage = "https://github.com/ewoks-kit/ewoksserver"
Documentation = "https://ewoksserver.readthedocs.io/en/stable/"
Repository = "https://github.com/ewoks-kit/ewoksserver"
Issues = "https://github.com/ewoks-kit/ewoksserver/issues"
Changelog = "https://github.com/ewoks-kit/ewoksserver/blob/main/CHANGELOG.md"

[project.optional-dependencies]
frontend = [
    "ewoksjob[sql]",
]
test = [
    "pytest >=7",
    "pytest-celery",
    "ewoksserver[frontend]",
    "pytest-mock",
    "httpx <1.0.dev1",       # https://github.com/encode/starlette/issues/2960
]
dev = [
    "ewoksserver[test]",
    "ruff",
    "isort",
]
doc = [
    "ewoksserver[test]",
    "sphinx >=4.5",
    "sphinx-autodoc-typehints >=1.16",
    "sphinxcontrib-redoc",
    "sphinx_design",
    "pydata_sphinx_theme",
    "sphinx-copybutton",
    "setuptools<82",                   # Issue https://github.com/sphinx-contrib/redoc/issues/53
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ['*.png', '*.svg', '*.json']

[tool.coverage.run]
omit = ['*/tests/*']

[project.scripts]
ewoks-server = "ewoksserver.__main__:main"
ewoks-server-spec = "ewoksserver.spec:save"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore `S101` (assert used violations) in all test files
"src/ewoksserver/tests/*.py" = ["S101"]

[tool.ruff.lint.isort]
force-single-line = true
