[metadata]
name = ewoksserver
version = attr: ewoksserver.__version__
author = ESRF
description = Backend for ewoksweb
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://gitlab.esrf.fr/workflow/ewoks/ewoksserver
project_urls = 
    Source = https://gitlab.esrf.fr/workflow/ewoks/ewoksserver
    Documentation = https://workflow.gitlab-pages.esrf.fr/ewoks/ewoksserver
    Tracker = https://gitlab.esrf.fr/workflow/ewoks/ewoksserver/issues
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir=
	=src
packages=find:
python_requires = >=3.7
install_requires = 
    flask<2.2  # flask-apispec issue #237
    flask-restful
    flask-cors
    flask-socketio
    flask-apispec
    simple-websocket
    ewokscore
    ewoksjob[worker]

[options.packages.find]
where=src

[options.package_data]
* = *.png, *.svg, *.json

[options.extras_require]
frontend =
    ewoksweb
test =
    pytest
    ewoksjob[test]
dev =
    %(test)s
    black
    flake8
doc =
    %(test)s
    sphinx
    sphinxcontrib-redoc

[options.entry_points]
console_scripts =
    ewoks-server=ewoksserver.server:main

[build_sphinx]
project = ewoksserver
version = attr: ewoksserver.__version__
source-dir = ./doc

# E501 (line too long) ignored for now
# E203 and W503 incompatible with black formatting (https://black.readthedocs.io/en/stable/compatible_configs.html#flake8)
[flake8]
ignore = E501, E203, W503
max-line-length = 88
exclude = 
    .eggs

[coverage:run]
omit =
    setup.py
    */tests/*
