[metadata]
name = ewoksserver
version = attr: ewoksserver.__version__
author = ESRF
description = Backend for ewoksweb
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://gitlab.esrf.fr/workflow/ewoks/ewoksserver
project_urls = 
    Source = https://gitlab.esrf.fr/workflow/ewoks/ewoksserver
    Documentation = https://workflow.gitlab-pages.esrf.fr/ewoks/ewoksserver
    Tracker = https://gitlab.esrf.fr/workflow/ewoks/ewoksserver/issues
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir=
	=src
packages=find:
python_requires = >=3.7
install_requires = 
    flask  # remove
    flask-restful  # remove
    flask-cors  # remove
    flask-socketio >=5.3.6  # remove
    flask-apispec  # remove
    # simple-websocket  # remove
    fastapi
    uvicorn[standard]
    ewoksjob[worker] >=0.2.5

[options.packages.find]
where=src

[options.package_data]
* = *.png, *.svg, *.json

[options.extras_require]
frontend =
    ewoksweb
    ewoksjob[sql]
test =
    pytest >=7
    pytest-celery
    sqlalchemy
    pytest-mock
    httpx
dev =
    %(test)s
    black >=22
    flake8 >=4
    ewokscore >=0.5
doc =
    %(test)s
    sphinx >=4.5
    sphinx-autodoc-typehints >=1.16
    sphinxcontrib-redoc

[options.entry_points]
console_scripts =
    ewoks-server=ewoksserver.__main__:main
    ewoks-server-spec=ewoksserver.spec:save

# E501 (line too long) ignored for now
# E203 and W503 incompatible with black formatting (https://black.readthedocs.io/en/stable/compatible_configs.html#flake8)
[flake8]
ignore = E501, E203, W503
max-line-length = 88
exclude = 
    .eggs

[coverage:run]
omit =
    setup.py
    */tests/*
